--- a/dpc-web/app/assets/stylesheets/components/_navbar.scss
+++ b/dpc-web/app/assets/stylesheets/components/_navbar.scss
@@ -25,6 +25,7 @@
 
 .navbar {
   align-items: center;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   padding: $spacer-2;
