--- a/dpc-web/app/assets/stylesheets/settings/_variables.scss
+++ b/dpc-web/app/assets/stylesheets/settings/_variables.scss
@@ -1,6 +1,8 @@
 // Colors
 $color-warn-alt: #e27100;
+$color-warn-alt-light: rgba($color-warn-lightest, .9);
 $color-primary-alt-dark: #004972;
+$color-gray-ultra-light: #f6f6f6;
 
 // Focus
 $focus-outline:  5px solid $color-gold-light;
