--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -27,14 +27,19 @@
  @import "components/alerts";
  @import "components/benefit-prop";
  @import "components/billboard";
+ @import "components/boxes";
  @import "components/buttons";
+ @import "components/cards";
  @import "components/fields";
+ @import "components/filter-groups";
  @import "components/footer";
  @import "components/hero";
  @import "components/icons";
  @import "components/modals";
+ @import "components/module-containers";
  @import "components/navbar";
  @import "components/page-headers";
  @import "components/pills";
  @import "components/process-list";
  @import "components/site-blocks";
+ @import "utilities/add-ons";
