--- a/dpc-web/app/views/internal/organizations/edit.html.erb
+++ b/dpc-web/app/views/internal/organizations/edit.html.erb
@@ -1,9 +1,15 @@
-<% title "Editing #{@organization.name}" %>
+<% title "Edit Organization" %>
 
 <div class="ds-l-row">
-  <div class="ds-l-col--12 ds-l-md-col--6 ds-u-margin-bottom--1 ds-u-margin-x--auto ds-u-border--1 ds-u-padding-bottom--2 ds-u-radius">
-    <%= form_for @organization, url: internal_organization_path(@organization), html: { method: :put } do |f| %>
-      <%= render 'internal/organizations/fields', f: f %>
-    <% end %>
-  </div>
+  <section class="ds-l-row--12 ds-l-md-col--9 ds-u-md-padding-left--2">
+
+    <%= link_to "Back to index", internal_organizations_path %>
+    <h1><%= @organization.name %></h1>
+
+    <div class="ds-u-border--1 ds-u-padding--2 ds-u-radius">
+      <%= form_for @organization, url: internal_organization_path(@organization), html: { method: :put } do |f| %>
+        <%= render 'internal/organizations/fields', f: f %>
+      <% end %>
+    </div>
+  <section>
 </div>
