--- a/dpc-web/app/views/internal/organizations/index.html.erb
+++ b/dpc-web/app/views/internal/organizations/index.html.erb
@@ -5,36 +5,36 @@
     <%= render "shared/internal/sidenav", current: :organizations %>
   </div>
 
-  <div class="ds-l-row--12 ds-l-md-col--9">
-    <div class="ds-l-row">
-      <h1 class="ds-h1">Viewing <b><%= @organizations.total_count %></b> provider organizations</h1>
-    </div>
 
-    <div class="ds-l-row">
-      <p class="ds-u-padding-x--1"><%= page_entries_info @organizations %></p>
-    </div>
+  <section class="ds-l-row--12 ds-l-md-col--9 ds-u-md-padding-left--2">
+    <%= link_to "Create new organization", new_internal_organization_path %>
 
-    <div class="ds-l-row">
-      <%= form_tag internal_organizations_path, method: "get" do %>
-        <%= text_field_tag :keyword, params[:keyword], placeholder: "name" %>
-        <%= submit_tag "Search", data: { test: 'organizations-keyword-search-submit' } %>
-      <% end %>
+    <h1 class="ds-h1">Viewing <strong><%= @organizations.total_count %></strong> provider organizations</h1>
+    <p class=""><%= page_entries_info @organizations %></p>
+    <%= form_tag internal_organizations_path, method: "get", class: "ds-u-display--flex" do %>
+      <%= text_field_tag :keyword, params[:keyword], placeholder: "name", class: "ds-c-field ds-u-margin--0" %>
+      <%= submit_tag "Search", data: { test: 'organizations-keyword-search-submit' }, class: "ds-c-button ds-c-button--primary ds-u-margin-left--1" %>
+    <% end %>
+
+    <div class="ds-u-margin-top--5 ds-u-margin-bottom--2">
+
+    <button type="button" id="filter-modal-trigger" class="list-control-button" data-modal-show="filter-modal" data-test="filter-modal-trigger">
+      <svg class="icon ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <use xlink:href="/assets/solid.svg#filter"></use>
+      </svg>
+      Filter
+    </button>
+
     </div>
 
     <% @organizations.each do |org| %>
-      <div class="ds-l-row">
-        <div class="ds-l-col ds-u-flex-wrap--wrap ds-u-display--flex-sm ds-u-padding--1">
-          <div class="ds-u-border--1 ds-u-radius height-sm--auto height-md--full">
-            <div class="ds-u-padding--1 ds-u-display--inline-block">
-              <div class="ds-u-font-size--lead">
-                <%= link_to org.name, internal_organization_path(org) %>
-              </div>
-            </div>
-          </div>
+      <div class="module-container">
+        <div class="module-container__primary">
+          <h3 class="module-container__heading"><%= link_to org.name, internal_organization_path(org) %></h3>
         </div>
       </div>
     <% end %>
     <%= paginate @organizations %>
-  </div>
+  </section>
 </div>
 
