--- a/dpc-web/app/views/internal/tags/index.html.erb
+++ b/dpc-web/app/views/internal/tags/index.html.erb
@@ -3,14 +3,7 @@
 
 <div class="ds-l-row">
   <div class="ds-l-row--12 ds-l-md-col--3">
-    <ul class="ds-c-vertical-nav">
-      <li class="ds-c-vertical-nav__item">
-        <%= link_to "Users", internal_users_path, class: "ds-c-vertical-nav__label" %>
-      </li>
-      <li class="ds-c-vertical-nav__item">
-        <%= link_to "Tags", internal_tags_path, class: "ds-c-vertical-nav__label ds-c-vertical-nav__label--current" %>
-      </li>
-    </ul>
+    <%= render "shared/internal/sidenav", current: :tags %>
   </div>
 
   <div class="ds-l-row--12 ds-l-md-col--9 ds-u-padding-bottom--2">
