--- a/dpc-web/app/views/layouts/application.html.erb
+++ b/dpc-web/app/views/layouts/application.html.erb
@@ -3,11 +3,11 @@
 
   <%= render partial: 'shared/head' %>
 
-  <body class="ds-base <% if controller_name == "users" %>ds-u-fill--gray-ultra-light<% end %>">
+  <body class="ds-base <% if internal_page? %>ds-u-fill--gray-ultra-light<% end %>">
     <!-- nav -->
     <%= render partial: 'shared/navbar' %>
 
-    <% if controller_name == "users" %>
+    <% if internal_page? %>
     <div class="header-seperator"></div>
     <% else %>
     <header class="page-header">
@@ -25,7 +25,7 @@
     <%= render partial: 'shared/alerts', locals: { notice: flash[:notice], alert: flash[:alert] } %>
 
     <!-- content -->
-    <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7 <% if controller_name == "users" %>ds-u-max-width--none<% end %>" id="main">
+    <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7 <% if internal_page? %>ds-u-max-width--none<% end %>" id="main">
       <%= yield %>
     </section>
 
