--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -29,6 +29,12 @@
         </svg>
         <%= @organization.organization_type.titleize %>
       </p>
+      <p>
+        <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <use xlink:href="/assets/solid.svg#users"></use>
+        </svg>
+        <%= @organization.num_providers %>
+      </p>
     </div>
   </div>
 
@@ -50,5 +56,11 @@
         <%= @organization.address_zip %>
       </p>
     </div>
+  </div>
+</section>
+
+<section class="ds-u-margin--2">
+  <div class="ds-l-row ds-u-justify-content--center">
+    <%= link_to "Delete provider", internal_organization_url(@organization), method: :delete, class: "ds-u-color--error ds-u-text-align--center" %>
   </div>
 </section>
