style collapsible left nav, static html for later use

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
  @import "components/footer";
  @import "components/hero";
  @import "components/icons";
+ @import "components/left-nav";
  @import "components/modals";
  @import "components/module-containers";
  @import "components/navbar";
