--- a/dpc-web/app/views/devise/registrations/edit.html.erb
+++ b/dpc-web/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
         <div class="field">
           <%= f.label :organization_type, 'Type of organization', class: "ds-c-label" %>
           <%= f.select :organization_type,
-            User::organization_types.keys.each_with_object([]) { |key, memo| memo << [key.titleize, key] },
+            organization_types_for_select,
             { include_blank: 'Please select a practice type' },
             class: "ds-c-field",
             :data => {:hide_follow_up => 'health_it_vendor'},
@@ -69,7 +69,7 @@
         <div class="field">
           <%= f.label :state, class: "ds-c-label" %>
           <%= f.select :state,
-                User::STATES.each_with_object([]) { |state, memo| memo << [state[1], state[0]] },
+                states_for_select,
                 { include_blank: 'Please select a state' },
                 class: "ds-c-field",
                 value: @user.state
