--- a/dpc-web/app/views/public/_hero.html.erb
+++ b/dpc-web/app/views/public/_hero.html.erb
@@ -15,7 +15,7 @@
             <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" >
             <use xlink:href="/assets/solid.svg#key"></use>
           </svg>
-          Request acccess</a>
+          Request access</a>
           <% end %>
 
           <%= link_to docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
