--- a/dpc-web/app/views/internal/users/edit.html.erb
+++ b/dpc-web/app/views/internal/users/edit.html.erb
@@ -1,3 +1,16 @@
 <% title "Editing #{@user.name}" %>
 
-<%= render 'internal/users/form' %>
+<div class="ds-l-container ds-u-padding-x--0">
+  <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
+
+    <h1 class="ds-u-font-weight--normal ds-u-margin--0">Edit user: <%= @user.name %></h1>
+
+  </section>
+
+  <section class="box">
+    <div class="box__content">
+      <%= render 'internal/users/form' %>
+    </div>
+  </section>
+</div>
+
