--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
  @import "base/base";
  @import "components/accordions";
  @import "components/alerts";
+ @import "components/back-button";
  @import "components/benefit-prop";
  @import "components/billboard";
  @import "components/boxes";
