back button rails way

--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -3,12 +3,13 @@
 
 <div class="ds-l-container ds-u-padding-x--0">
   <div>
-    <a href="javascript:history.back()" class="back-button">
+    <%= link_to internal_users_path, class: "back-button" do %>
       <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <use xlink:href="/assets/solid.svg#arrow-left"></use>
       </svg>
       Go back
-    </a>
+    <% end %>
+
   </div>
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
 
