filter groups to field groups

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@
  @import "components/buttons";
  @import "components/cards";
  @import "components/fields";
- @import "components/filter-groups";
+ @import "components/field-groups";
  @import "components/footer";
  @import "components/hero";
  @import "components/icons";
