--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -3,8 +3,8 @@
 
 <div class="ds-l-container ds-u-padding-x--0">
   <div>
-    <%= link_to internal_users_path, class: "back-button" do %>
-      <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    <%= link_to internal_users_path, class: "utility-button" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <use xlink:href="/assets/solid.svg#arrow-left"></use>
       </svg>
       Go back
