--- a/dpc-web/app/assets/stylesheets/components/_buttons.scss
+++ b/dpc-web/app/assets/stylesheets/components/_buttons.scss
@@ -47,3 +47,24 @@
     text-decoration: underline;
   }
 }
+
+
+.utility-button {
+  align-items: center;
+  display: inline-flex;
+  font-weight: $font-bold;
+  margin: 0 0 $spacer-2 0;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  svg {
+    margin-right: $spacer-1;
+    max-width: 1.2em;
+    max-height: 1.2em;
+    display: inline;
+    fill: currentColor;
+  }
+}
