organizations#new styles

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -38,6 +38,6 @@
 </div>
 
 <div class="actions ds-u-margin-top--3">
-  <%= f.submit "Save", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
+  <%= f.submit "Create organization", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
   <%= link_to "Cancel", :back, class: "ds-c-button ds-c-button--transparent" %>
 </div>
