--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -1,63 +1,72 @@
 
 <% title @organization.name %>
 
-<section class="ds-u-margin--2">
-  <div class="ds-l-row">
-    <%= link_to "Back to index", internal_organizations_path %>
-  </div>
-  <div class="ds-l-row ds-u-justify-content--end">
-    <%= link_to "Edit details", edit_internal_organization_url(@organization), class: "ds-c-button  ds-c-button--big ds-c-button--primary", data: { test: "edit-link" } %>
-  </div>
-</section>
+<div class="ds-l-container ds-u-padding-x--0">
+  <div>
+    <%= link_to internal_organizations_path, class: "utility-button" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <use xlink:href="/assets/solid.svg#arrow-left"></use>
+      </svg>
+      Organizations index
+    <% end %>
 
-<section class="ds-l-container ds-u-border--1 ds-u-radius">
-  <div class="ds-l-row">
-    <h2 class="ds-u-padding-x--2">Organization info</h2>
   </div>
 
-  <div class="ds-l-row">
-    <div class="ds-l-row--12 ds-l-md-col--6">
-      <p>
-        <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+  <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
+    <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0"><%=  @organization.name %></h1>
+    <div>
+      <%= link_to "Edit organization", edit_internal_organization_url(@organization), class: "ds-c-button  ds-c-button--big ds-c-button--primary", data: { test: "edit-link" } %>
+    </div>
+  </section>
+
+  <section class="box">
+    <div class="box__content">
+      <h2 class="box__heading">Organization info</h2>
+
+      <div class="ds-u-margin-bottom--1">
+        <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#user-alt"></use>
         </svg>
         <%= @organization.name %>
-      </p>
-      <p>
-        <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      </div>
+      <div class="ds-u-margin-bottom--1">
+        <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#envelope"></use>
         </svg>
         <%= @organization.organization_type.titleize %>
-      </p>
-      <p>
-        <svg class="icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      </div>
+      <div class="ds-u-margin-bottom--1">
+        <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <use xlink:href="/assets/solid.svg#users"></use>
         </svg>
-        <%= @organization.num_providers %>
-      </p>
-    </div>
-  </div>
+        <%= @organization.num_providers %> providers
+      </div>
 
-  <div class="ds-l-row">
-    <div class="ds-l-row--12 ds-l-md-col--6">
-      <p>
-        <%= @organization.address_street %>
-      </p>
-      <p>
-        <%= @organization.address_street_2 %>
-      </p>
-      <p>
-        <%= @organization.address_city %>
-      </p>
-      <p>
-        <%= @organization.address_state %>
-      </p>
-      <p>
-        <%= @organization.address_zip %>
-      </p>
     </div>
-  </div>
-</section>
+
+    <div class="box__content">
+      <h2 class="box__heading">Address</h2>
+      <div>
+        <%= @organization.address_street %>
+      </div>
+      <div>
+        <%= @organization.address_street_2 %>
+      </div>
+      <div>
+        <%= @organization.address_city %>
+      </div>
+      <div>
+        <%= @organization.address_state %>
+      </div>
+      <div>
+        <%= @organization.address_zip %>
+      </div>
+    </div>
+  </section>
+<div>
+
+
+
 
 <section class="ds-u-margin--2">
   <div class="ds-l-row ds-u-justify-content--center">
