--- a/dpc-web/app/views/internal/organizations/new.html.erb
+++ b/dpc-web/app/views/internal/organizations/new.html.erb
@@ -11,7 +11,7 @@
   <section class="box">
     <div class="box__content">
       <%= form_for @organization, url: internal_organizations_path do |f| %>
-        <%= render 'internal/organizations/fields', f: f %>
+        <%= render 'internal/organizations/fields', f: f, locals: {:button_label => "Create organization"}%>
       <% end %>
     </div>
   </section>
