--- a/dpc-web/app/views/internal/organizations/show.html.erb
+++ b/dpc-web/app/views/internal/organizations/show.html.erb
@@ -15,7 +15,7 @@
   <section class="ds-u-display--flex ds-u-justify-content--between ds-u-align-items--center">
     <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0"><%=  @organization.name %></h1>
     <div>
-      <%= link_to "Edit organization", edit_internal_organization_url(@organization), class: "ds-c-button  ds-c-button--big ds-c-button--primary", data: { test: "edit-link" } %>
+      <%= link_to "Edit organization", edit_internal_organization_url(@organization), class: "ds-c-button ds-c-button--primary", data: { test: "edit-link" } %>
     </div>
   </section>
 
@@ -70,6 +70,6 @@
 
 <section class="ds-u-margin--2">
   <div class="ds-l-row ds-u-justify-content--center">
-    <%= link_to "Delete provider", internal_organization_url(@organization), method: :delete, class: "ds-u-color--error ds-u-text-align--center" %>
+    <%= link_to "Delete provider organization", internal_organization_url(@organization), method: :delete, class: "ds-u-color--error ds-u-text-align--center" %>
   </div>
 </section>
