create pagination scss

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@
  @import "components/module-containers";
  @import "components/navbar";
  @import "components/page-headers";
+ @import "components/pagination";
  @import "components/pills";
  @import "components/process-list";
  @import "components/site-blocks";
