--- a/dpc-web/app/views/internal/organizations/edit.html.erb
+++ b/dpc-web/app/views/internal/organizations/edit.html.erb
@@ -11,7 +11,7 @@
   <section class="box">
     <div class="box__content">
       <%= form_for @organization, url: internal_organization_path(@organization), html: { method: :put } do |f| %>
-        <%= render 'internal/organizations/fields', f: f, locals: {:button_label => "Save"} %>
+        <%= render 'internal/organizations/fields', f: f, locals: {button_label:  "Save"} %>
       <% end %>
     </div>
   </section>
